Actually fix svg not showing

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@
   --pad-sm: calc(1vw + 0.25rem);
 }
 
-svg:not(:root) {
+svg {
   height: 100%;
   width: 100%;
 }
